--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard | Blogging App</title>
-<link rel="stylesheet" href="./style/home.css">
+<link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
 
@@ -13,9 +13,9 @@
     <h1>Personal Blogging App</h1>
     <div class="menu-toggle" id="menuToggle">☰</div>
     <nav id="navMenu">
-      <a href="#">Home</a>
-      <a href="#">My Blogs</a>
-     <a href="#" id="userProfile">User</a>
+      <a href="home.html">Home</a>
+      <a href="index.html">My Blogs</a>
+     <a href="user.html" id="userProfile">User</a>
 
       <a href="#" id="logoutBtn">Logout</a>
     </nav>
