--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
     <h1>Personal Blogging App</h1>
     <div class="menu-toggle" id="menuToggle">☰</div>
     <nav id="navMenu">
-      <a href="index.html">Home</a>
-      <a href="home.html">My Blogs</a>
+      <a href="home.html">Home</a>
+      <a href="index.html">My Blogs</a>
      <a href="user.html" id="userProfile">User</a>
 
       <a href="#" id="logoutBtn">Logout</a>
