--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p class="blog-text">
           Whisper is an automatic speech recognition (ASR) system trained on 680,000 hours of multilingual and multitask supervised data collected from the web. It enables transcription and translation into English for multiple languages.
         </p>
-        <a href="seeview.html" class="blog-link">see all from this user</a>
+        <a href="see-view.html" class="blog-link">see all from this user</a>
       </div>
 
 
